# deep_learning_neural_networks

./: .gitignore  Deep Learning on MNIST: From Simple Networks to CNN Architectures  Deep_Learning_MNIST_From_Simple_Networks_to_CNN_Architectures.ipynb  Deep_exc_1_adir_shoval.ipynb  Deep_exc_2_adir_shoval.ipynb  Deep_exc_3_adir_shoval_ipynb.ipynb  Hyperparameter Exploration for XOR: Hidden Layers, Bypass, and Learning Rates  LICENSE  LSTM_Model_Perplexity.ipynb  README.md  ex_3.ipynb  pyproject.toml  scratchpad.ipynb  util.py  words.py
src/: Deep_Learning_MNIST_From_Simple_Networks_to_CNN_Architectures.ipynb  PyTorch XOR Implementation and Analysis.ipynb  readme.md
src/quiz/: __init__.py  cli.py  llm_client.py  llm_interface.py  models.py  persistence.py  question_bank.py  quiz_agent.py  spaced_repetition.py  test_quiz_agent.py
src/quiz/tests/: test_llm_interface.py  test_persistence.py  test_question_bank.py  test_quiz_agent.py  test_spaced_repetition.py
tests/: test_models.py  test_persistence.py  test_quiz_agent.py  test_spaced_repetition.py
