[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-learning-quiz-agent"
version = "0.1.0"
description = "Interactive quiz agent with spaced repetition for deep learning topics"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
